# openknowit_awx

./: ansible.cfg  inventory
app/: pyproject.toml  requirements.txt
app/src/dash/: __init__.py  dash.py  getzabbixdata.py
playbooks/: setupdash.yml
playbooks/roles/ansible_role_app_airflow/: README.md
playbooks/roles/ansible_role_app_airflow/defaults/: main.yml
playbooks/roles/ansible_role_app_airflow/files/: main.yml
playbooks/roles/ansible_role_app_airflow/handlers/: main.yml
playbooks/roles/ansible_role_app_airflow/meta/: main.yml
playbooks/roles/ansible_role_app_airflow/tasks/: main.yml
playbooks/roles/ansible_role_app_airflow/templates/: main.yml
playbooks/roles/ansible_role_app_airflow/vars/: main.yml
playbooks/roles/ansible_role_app_ckan/: README.md
playbooks/roles/ansible_role_app_ckan/defaults/: main.yml
playbooks/roles/ansible_role_app_ckan/files/: main.yml
playbooks/roles/ansible_role_app_ckan/handlers/: main.yml
playbooks/roles/ansible_role_app_ckan/meta/: main.yml
playbooks/roles/ansible_role_app_dashcollect/: README.md
playbooks/roles/ansible_role_database_influx/: README.md
playbooks/roles/ansible_role_database_mongodb/: README.md
playbooks/roles/ansible_role_database_mysql/: README.md
playbooks/roles/ansible_role_database_postgresql/: README.md
playbooks/roles/ansible_role_database_redis/: README.md
playbooks/roles/ansible_role_web_airflow/: README.md
playbooks/roles/ansible_role_web_ckan/: README.md
playbooks/roles/ansible_role_web_dashapi/: README.md
playbooks/roles/ansible_role_web_grafana/: README.md
(+73 files in other folders)
